wrap index in nav and footer, fix routing

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ need css documentation here
 }
 
 .image-full {
-    width: 65vh;
+    width: 70vh;
     /* text-align: center; */
     /* margin: 0px auto; */
 }
